2009-11-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.117-1

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#142968 Task Launcher list missing rubberband effect

	* src/launcher/hd-launcher-grid.c 
	(hd_launcher_grid_refresh_v_adjustment):
	  Correct padding at the bottom of the sublauncher and enable
	  the rubber effect.
	* src/tidy/tidy-adjustment.c:
	  Introduced the skirt parameter to allow for temporary overshooting.
	* src/tidy/tidy-finger-scroll.c:
	  * motion_event_cb(): removed unnecessary interpolation
	  * deceleration_new_frame_cb(): redid for rubbing
	  * decel_rate: changed the meaning to be its inverse
	    and changed the value from 0.91 to 0.9

2009-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Thinko/regression fix/memory leak plug.

	* src/launcher/hd-launcher.c (hd_launcher_application_tile_clicked):
	  We never remembered the $tile being clicked so we just added the
	  weak ref but didn't clean it up later and didn't center the explosion
	  in the icon either.

2009-11-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Remove MAEMO_SCREEN_WIDTH/HEIGHT properties, those were replaced with
	MAEMO_SCREEN_SIZE.

	* debian/control: Depend on libgtk2.0-0 (>= 2:2.14.7-1maemo15).
	* src/util/hd-util.c (hd_util_set_screen_size_properties): Set
	MAEMO_SCREEN_SIZE only.
	* src/mb/hd-atoms.[ch]: Remove aforementioned WIDTH/HEIGHT properties.

2009-11-10  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#144333 - Upper side of "Enter lock code" panel filled with 
	                   blur application background 
	                   (and other blurring-related issues)
	                   
	* src/home/hd-render-manager.c:	Instead of checking the list of actors
	  in home blur to see if it has changed, check the list of *visible*
	  actors.

2009-11-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#143815 - Input field (text entry) widget for desktop widgets
	not defocusing in all required use cases
