@@ -2730,7 +2730,10 @@ hd_comp_mgr_effect (MBWMCompMgr                *mgr,
         hd_transition_notification(hmgr, c, MBWMCompMgrClientEventUnmap);
       else if (c_type == MBWMClientTypeDialog ||
                c_type == HdWmClientTypeAppMenu)
-        hd_transition_popup(hmgr, c, MBWMCompMgrClientEventUnmap);
+        {
+          if (!hd_util_client_obscured(c))
+            hd_transition_popup(hmgr, c, MBWMCompMgrClientEventUnmap);
+        }
       else if (c_type == MBWMClientTypeNote && !HD_IS_INCOMING_EVENT_NOTE(c))
         hd_transition_fade(hmgr, c, MBWMCompMgrClientEventUnmap);
       else if (c_type == MBWMClientTypeApp)
